    - Decreased number of UI layout updates in the trade overview for the same number of trades listed. O(n^2) -> less O(n^2), but substantial improvement.
    - Optimized "exact" filtering in trade overview. Small improvement.
    - Optimized planet filtering in trade overview, leading to the biggest performance gains. ~2x speedup in the average case.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 27/11/25
  Features:
    - Hex cores now emit flying text when they make a trade.  Can be disabled in the mod's player settings.
    - Hex cores now emit light, the color of which reacts to circuit signals.
        Default colors adjustable in mod settings!
    - Added "Enable Hexports" selection tool, allowing for large-scale enabling or disabling of hexports.
    - Added filters in trade overview for filtering out non-interplanetary trades, trades in dungeon hexes, and trades that are either in "sink" or "generator" hex cores.
  Minor Features:
    - Added "total belting distance", "sink / generator", and "dungeon" info to the output of /simple-trade-loops, as they are fast calculations.
  Balancing:
    - Made the stack inserter item buff require one less upgrade to have another effect on top of the initial unlock.
    - Slightly increased the range of dungeon gun turrets.
    - Slightly decreased the range of dungeon flamethrower and laser turrets.
    - Decreased the damage of dungeon turrets.
    - Increased the minimum distance that dungeons can be from the center hex by 1 hex tile.
    - Lowered the default mod settings for the frequencies of dungeons on each planet.
    - Made the default mod setting for the cost multiplier of supercharging 5x cheaper.
    - Slightly increased ore richness.
    - Slightly increased default mod setting for Fulgora hex size so that using trains is a little more feasible.